ligolang/src/test/contracts/negative/parametric_types1.mligo
type fail_big_map = bool map